fixed spacing on whosonwhat

--- a/widgets/categories/categories.scss
+++ b/widgets/categories/categories.scss
@@ -42,6 +42,7 @@ $pure-white: #ffffff;
     opacity: .8;
     text-align: left;
     padding: 5px 0;
+    margin-bottom: 15px;
   }
 
   table tr td.category-users {
